# sfc-project

./: .gitignore  CMakeLists.txt  README  README.md  cls.nn  sigmoid.fkt
data/scripts/: audiotag.cpp  features.make  lastfm  score.sh  tagproc.xsl
report/: Makefile  report.tex
src/: CMakeLists.txt  classifier.cpp  classifier.hpp  common.hpp  features.cpp  features.hpp  layer.cpp  layer.hpp  main.cpp  neuralnet.cpp  neuralnet.hpp
